--- a/Light/requirements.txt
+++ b/Light/requirements.txt
@@ -1,7 +1,7 @@
 1. основной светильник
 - имеет 6-ть цветных каналов(белый,бело-голубой,синий,фиолетовый,ультрафиолетовый,красный)
-- независимое управление через ШИМ с достаточной глубиной цвета
-- суммарная мощность led ламп от 75Вт
+- независимое управление через ШИМ с достаточной глубиной цвета, пример управления и библиотека https://alexgyver.ru/wp-content/uploads/2019/09/rgbstripMos.jpg
+- суммарная мощность led ламп от 75Вт до 150Вт
 
 2. светильник в тумбе
 - в идеале - повторяет функционал основного, но имеет меньшую мощность
